methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:31: error: value Yellow is not a member of object java.awt.Color
    faireV(Color.Yellow)
                 ^MethodsPicture:32: error: value Red is not a member of object java.awt.Color
    faireV(Color.Red)
                 ^MethodsPicture:33: error: value Blue is not a member of object java.awt.Color
    faireV(Color.Blue)
                 ^MethodsPicture:34: error: value Green is not a member of object java.awt.Color
    faireV(Color.Green)
                 ^